--- a/styles.css
+++ b/styles.css
@@ -33,41 +33,18 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: darkblue;
 }
-#Project::before {
-    content: '';
-    position: absolute;
-    width: 0;
-    height: 100%;
-    border-radius: 30em;
-    top: 0;
-    left: 0;
-    background-image: linear-gradient(to right, #0fd850 0%, #f9f047 100%);
-    transition: width 0.5s ease;
-    display: block;
-    z-index: -1;
-}
-
-#Project:hover::before {
-    width: 100%;
-}
-
-#Project:hover {
-    transform: scale(1.03);
-}
-
-#Project {
-    color: black;
-    padding: 25px 28px;
-    border-radius: 30em;
-    font-size: 34px;
+.Project {
+    display: inline-block;
+    background-color: #4fa51e;
+    color: white;
+    padding: 10px 20px;
     text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
-    border: none;
-    position: relative;
-    cursor: pointer;
-    overflow: hidden;
-    background-color: rgb(255, 255, 255);
-    z-index: 1;
-    box-shadow: 6px 6px 12px #afb4ac,
-        -6px -6px 12px #b6b8b4;
+    border-radius: 17px;
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+    transition: background-color 0.3s;
+    
+    position: absolute; 
+    top: 10px; 
+    left: 10px; 
 }
